tmux: add usage instructions as a comment inside the tmux conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,21 @@
 #
 # Terminal multiplexer (tmux) configuration. 
 # Unique Divine <realuniquedivine@gmail.com>
+# 
+# Usage:
+# 1. Install Tmux Plugin Manager, tpm:
+# ```bash
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# ```
+# 
+# 2. Reload the TMUX environment: 
+# ```bash
+# tmux source ~/.tmux.conf
+# ```
+#   
+# 3. Install the plugins. Run `tmux` and press `prefix` + `I` 
+#  (yes, it has to be a capital I). By default, 
+# `prefix` is Ctrl/Cmd + b.
 
 # set -g: Sets the global (session-wide) option in tmux
 # default-terminal "screen-256color": Sets the `default-terminal` 
