feat: Add custom Windows yank command and integrate @uniquedivine/bash package
- Introduces `:WY` Neovim command to yank text directly into Windows clipboard with UTF-16LE encoding.
- Adds `@uniquedivine/bash` local dependency for cleaner shell integration and simplifies clipboard tests.
- Updates LSP configuration: disables `unused-local` diagnostic warnings and enables automatic installation.
- Temporarily disables neo-tree; updates crates.nvim to stable release.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@uniquedivine/bash": "/home/realu/ki/jiyuu/bash-ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
